# timeloop-python

./: .gitignore  .gitmodules  CMakeLists.txt  DEBUGGING.md  Doxyfile  LICENSE  README.md  README_8md.html  TODO  annotated.html  arch_8py.html  art_8py.html  backend__calls_8py.html  base__specification_8py.html  classes.html  classpytimeloop_1_1timeloopfe_1_1common_1_1base__specification_1_1BaseSpecification-members.html  classpytimeloop_1_1timeloopfe_1_1common_1_1base__specification_1_1BaseSpecification.html  classpytimeloop_1_1timeloopfe_1_1common_1_1base__specification_1_1BaseSpecification__coll__graph.map  classpytimeloop_1_1timeloopfe_1_1common_1_1base__specification_1_1BaseSpecification__coll__graph.md5  classpytimeloop_1_1timeloopfe_1_1common_1_1base__specification_1_1BaseSpecification__inherit__graph.map  classpytimeloop_1_1timeloopfe_1_1common_1_1base__specification_1_1BaseSpecification__inherit__graph.md5  classpytimeloop_1_1timeloopfe_1_1common_1_1base__specification_1_1ProcessorListHolder-members.html  classpytimeloop_1_1timeloopfe_1_1common_1_1base__specification_1_1ProcessorListHolder.html  classpytimeloop_1_1timeloopfe_1_1common_1_1base__specification_1_1ProcessorListHolder__coll__graph.map  classpytimeloop_1_1timeloopfe_1_1common_1_1base__specification_1_1ProcessorListHolder__coll__graph.md5  classpytimeloop_1_1timeloopfe_1_1common_1_1base__specification_1_1ProcessorListHolder__inherit__graph.map  classpytimeloop_1_1timeloopfe_1_1common_1_1base__specification_1_1ProcessorListHolder__inherit__graph.md5  classpytimeloop_1_1timeloopfe_1_1common_1_1nodes_01copy_1_1CombinableListNode-members.html  classpytimeloop_1_1timeloopfe_1_1common_1_1nodes_01copy_1_1CombinableListNode.html  classpytimeloop_1_1timeloopfe_1_1common_1_1nodes_01copy_1_1CombinableListNode__coll__graph.map  classpytimeloop_1_1timeloopfe_1_1common_1_1nodes_01copy_1_1CombinableListNode__coll__graph.md5  classpytimeloop_1_1timeloopfe_1_1common_1_1nodes_01copy_1_1CombinableListNode__inherit__graph.map  classpytimeloop_1_1timeloopfe_1_1common_1_1nodes_01copy_1_1CombinableListNode__inherit__graph.md5  classpytimeloop_1_1timeloopfe_1_1common_1_1nodes_01copy_1_1DictNode-members.html  classpytimeloop_1_1timeloopfe_1_1common_1_1nodes_01copy_1_1DictNode.html  classpytimeloop_1_1timeloopfe_1_1common_1_1nodes_01copy_1_1DictNode__coll__graph.map  classpytimeloop_1_1timeloopfe_1_1common_1_1nodes_01copy_1_1DictNode__coll__graph.md5  classpytimeloop_1_1timeloopfe_1_1common_1_1nodes_01copy_1_1DictNode__inherit__graph.map  classpytimeloop_1_1timeloopfe_1_1common_1_1nodes_01copy_1_1DictNode__inherit__graph.md5  classpytimeloop_1_1timeloopfe_1_1common_1_1nodes_01copy_1_1FlatteningListNode-members.html  (+807 more)
.github/workflows/: main.yml
arch_spec_examples/: mapper.yaml
arch_spec_examples/eyeriss_like/: arch.yaml  arch_split.yaml
arch_spec_examples/eyeriss_nested_hierarchy/: arch.yaml  arch_split.yaml
arch_spec_examples/raella/: arch.yaml  macros.yaml  variables.yaml
arch_spec_examples/simba_like/: arch.yaml  arch_old.yaml  arch_split.yaml
arch_spec_examples/simple_output_stationary/: arch.yaml  arch_old.yaml  arch_split.yaml
arch_spec_examples/simple_pim/: arch.yaml  arch_old.yaml  arch_split.yaml
arch_spec_examples/simple_weight_stationary/: arch.yaml  arch_old.yaml  arch_split.yaml
arch_spec_examples/sparse_tensor_core_like/: arch.yaml  arch_old.yaml  arch_split.yaml
bench/: mapper_bench.py  util.py  view_report.py
benchmark/: CMakeLists.txt  accelerator-pool.h  accelerator.h  bench-main.cpp  concurrent-queue.h  mapper.h
bindings/: accelergy_interface.cpp  applications.cpp  bindings.cpp  bindings.h  buffer.cpp  config.cpp  config.h  ir.cpp  looptree.cpp  mapper.cpp  mapping.cpp  mapspace.cpp  model.cpp  problem.cpp  search.cpp  topology.cpp  type_casters.h  visualization.cpp  workload.h
bindings-test/: model.py  model_v2.py  model_v3.py  model_v4.py  native_model.py
bindings/looptree/: ir.cpp
bindings/mapper/: decoupled-mapper.cpp  util.h
bindings/model/: .engine.cpp.swp  accelerator-pool.cpp  accelerator.cpp  engine.cpp  eval-result.cpp  sparse_optimization_info.cpp
cpp_tests/: CMakeLists.txt  fixture-configs.h  test-accelerator.cpp  test-accelerator.h  test-concurrent-queue.h  test-configs.h  test-main.cpp  test-mapper.h  test-worker-pool.h
examples/: mha.py  model.py  native_model.py
include/bindings/: bindings.h  type_casters.h
pytimeloop/: __init__.py  accelergy_interface.py  config.py  engine.py  file.py  mapper.py  mapping.py  mapspace.py  model.py  problem.py  search.py
pytimeloop/app/: __init__.py  call_utils.py  mapper.py  model.py
pytimeloop/fastfusion/: compatibility.py  exploration.py  filter_mappings.py  fusionset.py  layerdeduplication.py  looptreedisplay.py  notes.md  old_filter_mappings.py  pareto.py  playground.py  profile_playground.py  sim.py  tags.py  util.py
pytimeloop/isl/: qpolynomial.py  reduction.py  singular.py  sum.py  to_str.py
pytimeloop/looptree/: accesses.py  des.py  energy.py  equivalent_ranks.py  latency.py  mapping_utilities.py  run.py
pytimeloop/timeloopfe/: __init__.py  command_line_interface.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+53 more)
src/configurator/: configurator.cpp
src/mapper/: coupled-mapper.cpp  decoupled-mapper.cpp  util.h
src/mapspace/: status.cpp
src/model/: accelerator-pool.cpp  accelerator.cpp  util.cpp  (+2 more)
tests/: .pylintrc  demo.py  load_config_mixin.py  test_accelerator.py  test_buffer.py  test_config.py  test_einsum_parse.py  test_looptree_accesses.py  test_looptree_model.py  test_looptree_workload.py  test_mapper.py  test_model.py  test_topology.py  util.py
(+230 files in other folders)
